--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.1.3",
     "@reduxjs/toolkit": "^2.2.3",
     "classnames": "^2.5.1",
+    "date-fns": "^3.6.0",
     "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
