--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.1.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5",
+    "socket.io-client": "^4.7.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
